# brainsmith

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py
app/pages/: embedder.py
app/retrieval/: embedding.py  loader.py  search.py
app/routers/: chunk.py  embedding.py  search.py
cortex/: brainsmith_logger.py  config.py  constants.py  main.py  middleware.py  types.py  ui.py  user_management.py
cortex/admin/: authenticate.py  model.py  oauth.py  security.py  users.py
cortex/models/: users.py
cortex/pages/: chatbot.py  embedder.py  settings.py
cortex/retrieval/: brainsmith_loader.py  chunking.py  code_interpret.py  document_qa.py  embedding.py  loader.py  local_dir_loader.py  search.py  stuff.py  summarize.py
cortex/routers/: auth.py  chunk.py  embedding.py  files.py  oauth.py  search.py  summarize.py
cortex/scraper/: __init__.py
cortex/storage/: chunks.py  session.py  tasks.py
cortex/tools/: categorize.py  context_agent.py  default_agent.py
cortex/waves/: basic_worker.py  better_joke.py  frontend_tutor.py  writer.py
tests/: .env.example  conftest.py  test_embedding.py  test_loader.py
tests/corpus/: paul_graham_essay_questions.txt
ui/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/src/: app.css  app.html  hooks.server.ts  hooks.ts
ui/src/lib/: constants.ts  utils.ts
ui/src/lib/api/auth/: index.ts
ui/src/lib/components/auth/: UserAuthForm.svelte
ui/src/lib/components/chat/: MessageInput.svelte
ui/src/lib/components/common/: Tooltip.svelte
ui/src/lib/components/embedding/: UploadFile.svelte
ui/src/lib/components/icons/: index.ts
ui/src/lib/components/layout/: AppSidebar.svelte  Header.svelte  NavMain.svelte  NavUser.svelte  Navbar.svelte  Sidebar.svelte
ui/src/lib/components/mode/: ToggleTheme.svelte
ui/src/routes/: +layout.svelte
ui/src/routes/(app)/: +layout.svelte  +page.svelte
ui/src/routes/(components)/: create-account.svelte  index.ts
ui/src/routes/auth/: +page.svelte  +page.ts
ui/src/routes/callback/: +page.svelte
ui/src/stores/: auth.d.ts  auth.ts
ui/static/: manifest.json  smui-dark.css  smui.css
(+5 files in other folders)
