[tool.poetry]
name = "brainsmith"
version = "0.1.0"
description = "Backend project for brainsmith"
authors = ["Daniel Dai <dch950429@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
